force-app/main/default/objects/Call_Detail__c/Call_Detail__c.object-meta.xml
<CustomObject>
    <label>Call Detail</label>
    <nameField>
        <displayFormat>CD{00000000}</displayFormat>
        <label>Call Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>