force-app/main/default/objects/Call_Detail__c/fields/Call_To_Mask__c.field-meta.xml
<CustomField>
    <fullName>Call_To_Mask__c</fullName>
    <formula>IF(
OR(
$Profile.Name = &quot;System Administrator&quot;
),
Call_To__c, /* Show actual phone number */  
LEFT(Call_To__c, 4) &amp; &apos;XXXX&apos; &amp; RIGHT(Call_To__c, 2) /* Masked phone */
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call To</label>
    <type>Text</type>
</CustomField>