force-app/main/default/objects/Call_Detail__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ANSWER</fullName>
            </value>
            <value>
                <fullName>CONNECTING</fullName>
            </value>
            <value>
                <fullName>Connected</fullName>
            </value>
            <value>
                <fullName>Customer Busy</fullName>
            </value>
            <value>
                <fullName>Originate</fullName>
            </value>
            <value>
                <fullName>Call Complete</fullName>
            </value>
            <value>
                <fullName>BUSY</fullName>
            </value>
            <value>
                <fullName>CANCEL</fullName>
            </value>
            <value>
                <fullName>Missed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>